# colzette

./: .coveragerc  .cruft.json  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.binder/: environment.yml
.github/workflows/: openalea_ci.yml
archive/data/climate/: IDEEV_2023_INRAE_STATION_91272001.csv
archive/data/parameters/: type_params_fababean.csv  type_params_rapeseed.csv
archive/simulations/: run_intercrop_vigo.py  run_monocrop_faba.py
conda/: environment.yml  meta.yaml
doc/: api.md  conf.py  extra.md  index.md  installation.md  notebook_examples.rst
doc/examples/: example1.ipynb  example2.ipynb  index.ipynb  intercrop_calculation.py  monocrop_calculation.ipynb
doc/examples/data/climate/: .~lock.IDEEV_2023_INRAE_STATION_91272001.csv#
doc/examples/data/input_leaf_surface/: .~lock.set_TLA_IDEEV.csv#
doc/examples/data/parameters/: global_params_fababean.csv
doc/user/: api_colzette.rst  api_geometry.rst  api_light.rst  api_population.rst  api_scene.rst  api_simulation.rst
results/monocrop_aviso/: res_Eabs_monocrop_aviso_copy.csv
simulations/: my_run_monocrop_aviso.py  run_intercrop_aviso.py  run_intercrop_vigo.py  run_monocrop_aviso.py  run_monocrop_faba.py  run_monocrop_vigo.py
src/openalea/colzette/: __init__.py  colzette.py  colzette_lib.py  deprecated_or_unused.py  geometry.py  light.py  population.py  scene.py  simulation.py
src/openalea/colzette/data/input_leaf_surface/: set_TLA_IDEEV.csv
src/openalea/colzette/data/parameters/: global_params_fababean.csv  global_params_rapeseed.csv  type_params_fababean.csv  type_params_rapeseed.csv
src/openalea/colzette_wralea/: __init__.py
test/: test_colzette.py
test/data/: met_gif_2023.csv  set_TLA_gif.csv
